deploy/envoy/envoy.yaml
admin:
  address:
    pipe:
      path: '@envoy/admin'
bootstrap_extensions:
- name: envoy.bootstrap.internal_listener
  typed_config:
    '@type': type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener
node:
  id: envoy
  cluster: envoy
overload_manager:
  resource_monitors:
  - name: envoy.resource_monitors.global_downstream_max_connections
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
      max_active_downstream_connections: 1048576
static_resources:
  listeners:
  # transparent proxy status listener
  - name: status
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 9101
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: status
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: main
            virtual_hosts:
            - name: default
              domains:
              - '*'
              routes:
              - name: liveness
                match:
                  path: /healthz/live
                route:
                  cluster: enchanted_status
              - name: readiness
                match:
                  path: /healthz/ready
                route:
                  cluster: enchanted_status
              - name: metrics
                match:
                  path: /metrics
                route:
                  cluster: enchanted_status
              - name: metrics-envoy
                match:
                  path: /stats/prometheus
                route:
                  cluster: admin
  # transparent proxy egress listeners
  - name: egress_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: '%REQUESTED_SERVER_NAME%:443'
          access_log: &access_log_tcp
          - name: envoy.access_loggers.stdout
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              logFormat:
                jsonFormat:
                  bytes_received: '%BYTES_RECEIVED%'
                  bytes_sent: '%BYTES_SENT%'
                  connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
                  downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                  downstream_remote_address: '%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%'
                  downstream_wire_bytes_received: '%DOWNSTREAM_WIRE_BYTES_RECEIVED%'
                  downstream_wire_bytes_sent: '%DOWNSTREAM_WIRE_BYTES_SENT%'
                  duration: '%DURATION%'
                  requested_server_name: '%REQUESTED_SERVER_NAME%'
                  route_name: '%ROUTE_NAME%'
                  start_time: '%START_TIME%'
                  upstream_cluster: '%UPSTREAM_CLUSTER%'
                  upstream_host: '%UPSTREAM_HOST%'
                  upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
                  upstream_request_attempt_count: '%UPSTREAM_REQUEST_ATTEMPT_COUNT%'
                  upstream_wire_bytes_received: '%UPSTREAM_WIRE_BYTES_RECEIVED%'
                  upstream_wire_bytes_sent: '%UPSTREAM_WIRE_BYTES_SENT%'
          access_log_options:
            flush_access_log_on_connected: true
  # test inference hardware endpoint (temporary)
  - name: egress_ai_box
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: '%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%:8000'
          access_log: *access_log_tcp
          access_log_options:
            flush_access_log_on_connected: true
  # internal inference endpoints
  - name: internal_anonymizer
    internal_listener: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: anonymizer-4b.llm.eternisai.net:443
          access_log: *access_log_tcp
          access_log_options:
            flush_access_log_on_connected: true
  - name: internal_zcash_backend
    internal_listener: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: zcash.eternisai.net:443
          access_log: *access_log_tcp
          access_log_options:
            flush_access_log_on_connected: true
  - name: egress_anonymizer
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20120
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http_proxy
          stream_idle_timeout: 900s
          access_log: &access_log_http
          - name: envoy.access_loggers.stdout
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              logFormat:
                jsonFormat:
                  authority: '%REQ(:AUTHORITY)%'
                  bytes_received: '%BYTES_RECEIVED%'
                  bytes_sent: '%BYTES_SENT%'
                  connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
                  downstream_local_address: '%DOWNSTREAM_LOCAL_ADDRESS%'
                  downstream_remote_address: '%DOWNSTREAM_DIRECT_REMOTE_ADDRESS%'
                  downstream_wire_bytes_received: '%DOWNSTREAM_WIRE_BYTES_RECEIVED%'
                  downstream_wire_bytes_sent: '%DOWNSTREAM_WIRE_BYTES_SENT%'
                  duration: '%DURATION%'
                  method: '%REQ(:METHOD)%'
                  original_path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
                  path: '%REQ(:PATH)%'
                  protocol: '%PROTOCOL%'
                  request_duration: '%REQUEST_DURATION%'
                  request_id: '%REQ(X-REQUEST-ID)%'
                  requested_server_name: '%REQUESTED_SERVER_NAME%'
                  response_code: '%RESPONSE_CODE%'
                  response_code_details: '%RESPONSE_CODE_DETAILS%'
                  response_duration: '%RESPONSE_DURATION%'
                  route_name: '%ROUTE_NAME%'
                  start_time: '%START_TIME%'
                  upstream_cluster: '%UPSTREAM_CLUSTER%'
                  upstream_host: '%UPSTREAM_HOST%'
                  upstream_local_address: '%UPSTREAM_LOCAL_ADDRESS%'
                  upstream_request_attempt_count: '%UPSTREAM_REQUEST_ATTEMPT_COUNT%'
                  upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
                  upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
                  upstream_wire_bytes_received: '%UPSTREAM_WIRE_BYTES_RECEIVED%'
                  upstream_wire_bytes_sent: '%UPSTREAM_WIRE_BYTES_SENT%'
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: main
            virtual_hosts:
            - name: default
              domains:
              - '*'
              routes:
              - name: default
                match:
                  prefix: /
                route:
                  cluster: internal_anonymizer
                  timeout: 0s
                  retry_policy:
                    retry_on: gateway-error
                    num_retries: 2
  - name: egress_zcash_backend
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 20002
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: http_proxy
          stream_idle_timeout: 900s
          access_log: *access_log_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: main
            virtual_hosts:
            - name: default
              domains:
              - '*'
              routes:
              - name: default
                match:
                  prefix: /
                route:
                  cluster: internal_zcash_backend
                  timeout: 0s
                  retry_policy:
                    retry_on: gateway-error
                    num_retries: 2
  - name: egress_nats
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 4222
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: '%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%:4222'
          access_log: *access_log_tcp
          access_log_options:
            flush_access_log_on_connected: true
  - name: egress_postgresql
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 5432
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_proxy
          cluster: enclaver_odyn_egress
          tunneling_config:
            hostname: '%DOWNSTREAM_DIRECT_REMOTE_ADDRESS_WITHOUT_PORT%:5432'
          access_log: *access_log_tcp
          access_log_options:
            flush_access_log_on_connected: true
  # service ingress listeners
  - name: ingress_proxy_api
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8180
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filter_chain_match:
        transport_protocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_proxy_api
          stream_idle_timeout: 900s
          access_log: *access_log_http
          http_filters:
          - &http_compressor
            name: envoy.filters.http.compressor
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              compressor_library:
                name: gzip_responses
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
              response_direction_config:
                disable_on_etag_header: true
                remove_accept_encoding_header: true
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: main
            virtual_hosts:
            - name: enchanted_proxy
              domains:
              - '*'
              routes:
              - name: enchanted_proxy_attestation
                match:
                  path: /api/v1/attestation
                route:
                  cluster: attestation_server
                  timeout: 0s
              - name: enchanted_proxy
                match:
                  prefix: /
                route:
                  cluster: enchanted_proxy
                  timeout: 0s
      transport_socket: &transport_socket_tls
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: ["h2", "http/1.1"]
            tls_params:
              tls_minimum_protocol_version: TLSv1_2
              tls_maximum_protocol_version: TLSv1_3
            tls_certificate_sds_secret_configs:
            - name: tls
              sds_config:
                path_config_source:
                  path: /etc/envoy/sds/tls.yaml
                  watched_directory:
                    path: /var/run/secrets/tls
  - name: ingress_telegram_api
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8181
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filter_chain_match:
        transport_protocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_telegram_api
          stream_idle_timeout: 900s
          access_log: *access_log_http
          http_filters:
          - *http_compressor
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: main
            virtual_hosts:
            - name: enchanted_telegram_server
              domains:
              - '*'
              routes:
              - name: enchanted_telegram_server_attestation
                match:
                  path: /api/v1/attestation
                route:
                  cluster: attestation_server
                  timeout: 0s
              - name: enchanted_telegram_server
                match:
                  prefix: /
                route:
                  cluster: enchanted_telegram_server
                  timeout: 0s
      transport_socket: *transport_socket_tls
  clusters:
  # admin interface
  - name: admin
    connect_timeout: 0.5s
    load_assignment:
      cluster_name: admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: '@envoy/admin'
  # attestation server endpoint
  - name: attestation_server
    connect_timeout: 0.5s
    circuit_breakers: &circuit_breakers
      thresholds:
      - max_connections: 102400
        max_pending_requests: 102400
        max_requests: 102400
        retry_budget:
          budget_percent:
            value: 50
    load_assignment:
      cluster_name: attestation_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8187
  # internal endpoints
  - name: internal_anonymizer
    load_assignment:
      cluster_name: internal_anonymizer
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              envoy_internal_address:
                server_listener_name: internal_anonymizer
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          alpn_protocols: ["h2", "http/1.1"]
          tls_params: &mtls_params
            tls_minimum_protocol_version: TLSv1_3
            tls_maximum_protocol_version: TLSv1_3
            ecdh_curves:
            - X25519
            - P-256
            - P-384
          tls_certificate_sds_secret_configs:
          - name: mtls
            sds_config:
              path_config_source:
                path: /etc/envoy/sds/mtls.yaml
                watched_directory:
                  path: /var/run/secrets/mtls
          validation_context_sds_secret_config:
            name: mtls-anonymizer
            sds_config:
              path_config_source:
                path: /etc/envoy/sds/mtls-anonymizer.yaml
                watched_directory:
                  path: /var/run/secrets/mtls
  - name: internal_zcash_backend
    load_assignment:
      cluster_name: internal_zcash_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              envoy_internal_address:
                server_listener_name: internal_zcash_backend
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: zcash.eternisai.net
        common_tls_context:
          alpn_protocols: ["h2", "http/1.1"]
          tls_params: *mtls_params
          validation_context_sds_secret_config:
            name: llm_ca
            sds_config:
              path_config_source:
                path: /etc/envoy/sds/llm_ca.yaml
                watched_directory:
                  path: /etc/ssl/certs/eternis
  # transparent proxy endpoint
  - name: enclaver_odyn_egress
    connect_timeout: 1s
    circuit_breakers: *circuit_breakers
    typed_extension_protocol_options: &typed_extension_protocol_options
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive:
        keepalive_time: 30
        keepalive_interval: 10
        keepalive_probes: 3
    load_assignment:
      cluster_name: enclaver_odyn_egress
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10000
  # service endpoints
  - name: enchanted_proxy
    connect_timeout: 1s
    circuit_breakers: *circuit_breakers
    typed_extension_protocol_options: *typed_extension_protocol_options
    load_assignment:
      cluster_name: enchanted_proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: enchanted_telegram_server
    connect_timeout: 1s
    circuit_breakers: *circuit_breakers
    typed_extension_protocol_options: *typed_extension_protocol_options
    load_assignment:
      cluster_name: enchanted_telegram_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8081
  - name: enchanted_status
    connect_timeout: 0.5s
    circuit_breakers: *circuit_breakers
    typed_extension_protocol_options: *typed_extension_protocol_options
    load_assignment:
      cluster_name: enchanted_status
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9090
